@@ -30,6 +30,9 @@ Bug Handling
 Features
 --------
 
+* Added a HyperLogLog library to the Lua sandbox using the Redis implementation
+  http://antirez.com/news/75.
+
 * Added an alert encoder to make the alert messages easier to read.
 
 * Introduced Encoder plugin type (issue #417).
